--- a/app/src/main/res/layout/fragment_prev.xml
+++ b/app/src/main/res/layout/fragment_prev.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:id="@+id/swipe"
-android:layout_margin="8dp"
->
-<android.support.v7.widget.RecyclerView
-        android:id="@+id/idPreviousMatch"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center"
+              android:orientation="vertical">
 
-</android.support.v7.widget.RecyclerView>
+    <Spinner
+            android:id="@+id/spinner_sample"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipe"
+    android:layout_margin="8dp"
+    >
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/idPreviousMatch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
