add layout player

--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -6,11 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ProgressBar
-            android:id="@+id/teamProgressBar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"/>
+    <!--<ProgressBar-->
+            <!--android:id="@+id/teamProgressBar"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="80dp"-->
+            <!--android:layout_gravity="center"/>-->
 
     <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
