--- a/app/src/main/res/layout/player_detail.xml
+++ b/app/src/main/res/layout/player_detail.xml
@@ -5,20 +5,97 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-            <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
-                    android:id="@+id/playerImage"/>
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/playerName"/>
+    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
 
-            <TextView
-                    android:text="TextView"
+
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/playerDesc"/>
+                    android:orientation="vertical">
+
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:srcCompat="@tools:sample/avatars"
+                        android:id="@+id/playerImage"
+                        tools:layout_editor_absoluteY="19dp"
+                        tools:layout_editor_absoluteX="16dp"/>
+
+
+                <GridLayout
+                        android:layout_marginTop="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:columnCount="2"
+                        android:rowCount="2"
+                        android:orientation="horizontal"
+                        android:layout_gravity="center">
+
+
+                    <TextView
+                            android:text="Weight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="30dp"
+                            android:gravity="center"/>
+
+                    <TextView
+                            android:text="Height"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:gravity="center"/>
+
+                    <TextView
+                            android:text="65"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/playerWeight"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="30dp"
+                            android:gravity="center"/>
+
+                    <TextView
+                            android:text="1.68"
+                            android:textSize="30dp"
+                            android:textColor="@color/colorAccent"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/playerHeight"
+                            android:layout_marginLeft="30dp"
+                            android:gravity="center"/>
+
+                </GridLayout>
+
+                <TextView
+                        android:layout_marginTop="20dp"
+                        android:text="Forward"
+                        android:textSize="20dp"
+                        android:id="@+id/playerPosition"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"/>
+
+                <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="Forward"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/playerDesc"
+                        android:gravity="center"/>
+
+            </LinearLayout>
+
+
+
+        </RelativeLayout>
+
+
+
+    </ScrollView>
+
+
 
 </android.support.constraint.ConstraintLayout>
